[project]
name = "VRCF-Bot"
version = "0.1.0"
description = "VRCF-Bot"
readme = "README.md"
requires-python = ">=3.9, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
    { name = "Telegram", module_name = "nonebot.adapters.telegram" },
    { name = "QQ", module_name = "nonebot.adapters.qq" },
    { name = "Discord", module_name = "nonebot.adapters.discord" }
]
plugins = ["nonebot_plugin_userinfo"]
plugin_dirs = ["src/plugins"]
builtin_plugins = []

[tool.poetry.dependencies]
nonebot-adapter-onebot = "^2.4.6"
nonebot-adapter-telegram = "^0.1.0b20"
nonebot-adapter-qq = "^1.6.4"
nonebot-adapter-discord = "^0.1.8"
nonebot2 = {extras = ["fastapi"], version = "^2.4.2"}
